--- a/src/app/features/dashboard/dashboard.component.css
+++ b/src/app/features/dashboard/dashboard.component.css
@@ -1,3 +1,5 @@
+/* Sidenav */
+
 .example-container {
   width: 100%;
   height: 100%;
@@ -12,4 +14,10 @@
 
 .example-sidenav {
   padding: 20px;
+}
+
+  /* Toolbar */
+
+  .example-spacer {
+  flex: 1 1 auto;
 }
