--- a/src/app/features/auth/login/login.component.html
+++ b/src/app/features/auth/login/login.component.html
@@ -9,20 +9,32 @@ background-color: blanchedalmond;">
     <mat-card-content>
       <form action="">
 
+        <!-- USUARIO -->
+
         <mat-form-field appearance="outline">
           <mat-label>Email</mat-label>
             <input matInput />
             <mat-hint>Debe ingresar un mail valido</mat-hint>
             <mat-icon mat-sufix>mail</mat-icon>
+        </mat-form-field>
+          <!-- CONTRASEÑA -->
 
-      </mat-form-field>
-
-        <mat-form-field appearance="outline">
+          <mat-form-field appearance="outline">
              <mat-label>Password</mat-label>
               <input matInput />
               <mat-hint>Debe ingresar su contraseña</mat-hint>
               <mat-icon mat-sufix>lock</mat-icon>
         </mat-form-field>
+
+          <!-- SELECTOR DE USUARIO -->
+
+          <mat-form-field>
+              <mat-label>Rol</mat-label>
+                <mat-select>
+                  <mat-option value="Admin">Admin</mat-option>
+                  <mat-option value="User">User</mat-option>
+                </mat-select>
+          </mat-form-field>
       </form>
     </mat-card-content>
   </mat-card>
