armo el pipe personalizado, pero me falla el boton del html

--- a/src/app/features/auth/login/login.component.html
+++ b/src/app/features/auth/login/login.component.html
@@ -1,3 +1,5 @@
+<!-- Dialogo de entrada a la plataforma con el mail y la contraseña -->
+
 <div style="display: flex;
 justify-content: center;
 align-items: center;
