--- a/src/app/features/dashboard/courses/courses.component.html
+++ b/src/app/features/dashboard/courses/courses.component.html
@@ -1,3 +1,6 @@
+
+<!-- pantalla para crear cursos -->
+
 <button (click)="openDialog()"mat-flat-button>
   <mat-icon>add</mat-icon>Crear Curso</button>
 
