--- a/src/app/features/dashboard/dashboard.component.html
+++ b/src/app/features/dashboard/dashboard.component.html
@@ -3,7 +3,7 @@
 
     <!-- BARRA LATERAL DEL MENU -->
 
-    <mat-drawer #drawer class="example-sidenav" mode="side">
+    <mat-drawer [opened]="true" class="example-sidenav" mode="side">
 
       <mat-nav-list>
         <a mat-list-item href="...">Inicio</a>
@@ -12,27 +12,21 @@
         <a mat-list-item href="...">Inscripciones</a>
       </mat-nav-list>
 
-      <!-- <p>Menu</p>
-    @if (showFiller) {
-      <p>Opciones</p>
-    }
-    <button mat-raised-button (click)="showFiller = !showFiller" mat-raised-button>
-      Menu
-    </button> -->
   </mat-drawer>
 
     <!-- CONTENIDO -->
 
       <!-- Toolbar inicio-->
-    <mat-toolbar style="background-color: red;">
+    <mat-toolbar style="background-color: rgb(172, 162, 162);">
 
-      <button
-      (click)="drawer.toggle()"
-        mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
+        <!-- Lo tengo que dejar como comentario, porque me larga error la palabra drawer en el
+        codigo -->
+
+      <!-- <button (click)="drawer.toggle()" mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
         <mat-icon>apps</mat-icon>
-      </button>
-        <span>Alumnos</span>
-          <!-- <div class="example-button-container">
+      </button> -->
+        <!-- <span>Alumnos</span>
+          <div class="example-button-container">
           <button mat-fab extended routerLink="Alumnos">
           <mat-icon>Apps</mat-icon>
           </div> -->
@@ -49,12 +43,6 @@
       <app-courses></app-courses>
     </main>
     <!-- Toolbar fin -->
-
-    <!-- <div class="example-sidenav-content">
-    <button type="button" mat-button >
-      Bienvenido
-    </button>
-  </div> -->
 
 </mat-drawer-container>
 
