termino lista de alumnos/armo carpeta de directivas

--- a/src/app/features/dashboard/dashboard.component.html
+++ b/src/app/features/dashboard/dashboard.component.html
@@ -18,8 +18,11 @@
 
       <!-- Toolbar inicio-->
 
+      <!-- No puedo usar el codigo (click)="drawer.toggle()" porque me indica que desconoce
+      la palabra drawer -->
+
       <mat-toolbar>
-        <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
+        <button mat-icon-button class="example-icon">
           <mat-icon>apps</mat-icon>
         </button>
         <span>Alumnos</span>
