--- a/src/app/features/dashboard/courses/courses.component.html
+++ b/src/app/features/dashboard/courses/courses.component.html
@@ -7,32 +7,43 @@
 
   <p>El nombre del curso creado es: {{nombreCurso}}</p>
 
-
-
   <!-- TABLA DE ALUMNOS -->
 
   <div class="flex align-content-end flex-wrap">
 
-
     <table  mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
-
     <!--  Columna dePosicion -->
-    <ng-container matColumnDef="position">
+    <ng-container matColumnDef="id">
       <th mat-header-cell *matHeaderCellDef> No. </th>
-      <td mat-cell *matCellDef="let element"> {{element.position}} </td>
+      <td mat-cell *matCellDef="let element"> {{element.id}} </td>
     </ng-container>
 
     <!-- Columna de nombre -->
-    <ng-container matColumnDef="Nombre">
-      <th mat-header-cell *matHeaderCellDef> Nombre </th>
-      <td mat-cell *matCellDef="let element"> {{element.Nombre}} </td>
+    <ng-container matColumnDef="name">
+      <th mat-header-cell *matHeaderCellDef>Nombre del Curso </th>
+      <td mat-cell *matCellDef="let element"> {{element.name}} </td>
     </ng-container>
 
-    <!-- Columna del apellido -->
-    <ng-container matColumnDef="Apellido">
-      <th mat-header-cell *matHeaderCellDef> Apellido </th>
-      <td mat-cell *matCellDef="let element"> {{element.Apellido}} </td>
+    <!-- Columna del inicio del curso -->
+    <ng-container matColumnDef="starDate">
+      <th mat-header-cell *matHeaderCellDef>Fecha de Inicio</th>
+      <td mat-cell *matCellDef="let element"> {{element.starDate | date: "dd/MM/YYYY"}} </td>
+    </ng-container>
+
+    <!-- Columna del fin del curso -->
+
+    <ng-container matColumnDef="endDate">
+      <th mat-header-cell *matHeaderCellDef>Fecha de Fin </th>
+      <td mat-cell *matCellDef="let element"> {{element.endDate | date: "dd/MM/YYYY"}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="actions">
+      <th mat-header-cell *matHeaderCellDef>Alta/Baja</th>
+      <td mat-cell *matCellDef="let element"> {{element.actions}} </td>
+      <button (click)="deleteCourseById(element.id)">
+        <mat-icon>delete</mat-icon>
+      </button>
     </ng-container>
 
 
