termino los servicios y el router, pero no funciona

--- a/src/app/features/auth/login/login.component.html
+++ b/src/app/features/auth/login/login.component.html
@@ -39,6 +39,8 @@ background-color: blanchedalmond;">
                   <mat-option value="User">User</mat-option>
                 </mat-select>
           </mat-form-field>
+          <button [routerLink]="['/dashboard']" routerLinkActive="router-link-active"
+          mat-flat-button>Iniciar Sesion</button>
       </form>
     </mat-card-content>
   </mat-card>
