--- a/src/app/features/dashboard/courses/courses.component.html
+++ b/src/app/features/dashboard/courses/courses.component.html
@@ -11,7 +11,7 @@
 
   <div class="flex align-content-end flex-wrap">
 
-    <table  mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+    <table  mat-table [dataSource]="courseList" class="mat-elevation-z8">
 
     <!--  Columna dePosicion -->
     <ng-container matColumnDef="id">
