--- a/src/app/features/dashboard/dashboard.component.html
+++ b/src/app/features/dashboard/dashboard.component.html
@@ -10,10 +10,14 @@
         <a mat-list-item routerLink="['/courses']" [activated]="true">Cursos</a>
         <a mat-list-item routerLink="['']" [activated]="true">Alumnos</a>
         <a mat-list-item routerLink="['/Inscripciones]" [activated]="true">Inscripciones</a>
-        <a (click)="logout()" mat-list-item>Salir</a>
+
+        <!-- <a (click)="logout()" mat-list-item>Salir</a> -->
+
+
       </mat-nav-list>
 
-      </mat-drawer>
+
+    </mat-drawer>
 
     <!-- CONTENIDO -->
 
@@ -21,18 +25,21 @@
 
             <mat-toolbar>
               <button
-              (click)="drawer.toggle()"
-              mat-icon-button class="example-icon">
+
+              mat-icon-button
+              class="example-icon">
                 <mat-icon>apps</mat-icon>
               </button>
+
               <span>Alumnos</span>
               <span class="example-spacer"></span>
 
             </mat-toolbar>
 
-      <app-courses></app-courses>
+            <router-outlet />
+      <!-- <app-courses></app-courses> -->
 
     <!-- Toolbar fin -->
 
-  <!-- </mat-drawer-container> -->
+  </mat-drawer-container>
 
